@@ -1273,7 +1273,7 @@ test unixWm-37.3 {Tk_WmCmd procedure, "transient" option} {unix testwrapper} {
 	    [testprop [testwrapper .t2] WM_TRANSIENT_FOR]
     destroy .t2
     set result
-} {{} {} .t 0 {} 0x0}
+} {{} {} .t 0 {} {}}
 test unixWm-37.4 {TkWmDeadWindow, destroy on master should clear transient} {unix testwrapper} {
     catch {destroy .t2}
     toplevel .t2
@@ -1284,7 +1284,7 @@ test unixWm-37.4 {TkWmDeadWindow, destroy on master should clear transient} {uni
     destroy .t3
     update
     list [wm transient .t2] [testprop [testwrapper .t2] WM_TRANSIENT_FOR]
-} {{} 0x0}
+} {{} {}}
 test unixWm-37.5 {Tk_WmCmd procedure, "transient" option, create master wrapper} {unix testwrapper} {
     catch {destroy .t2}
     catch {destroy .t3}
